--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'Sunday schools -- United States -- Periodicals'
 - !lcsh 'American literature -- 19th century -- Periodicals'
+- GITenberg
 title: The Pansy Magazine, June 1886
 url: http://www.gutenberg.org/ebooks/45408
